Sistem Monitoring PIC dan Rekanan

--- a/Reston.EProc.Runner.IIS/View/approval-perencanaan-belum-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-perencanaan-belum-disetujui.html
@@ -129,7 +129,7 @@
                                     <div class="form-group col-md-12">
                                         <label class="title"><h3>Dokumen Pengadaan yang Butuh Persetujuan</h3></label>
                                     </div>
-                                    <div class="col-md-10" style="margin-left: 60px;">
+                                    <div class="col-md-12">
                                         <table class="table table-bordered table-striped table-responsive" id="tbl-approval" style="margin-top:20px; ">
                                             <thead>
                                                 <tr>
