--- a/Reston.EProc.Runner.IIS/View/approval-perencanaan-sudah-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-perencanaan-sudah-disetujui.html
@@ -214,7 +214,7 @@
                     },
                     { "data": "Judul"},
                     { "data": "HPS", "className": "rata_kanan" },
-                    { "data": "JenisPekerjaan" },
+                    { "data": "JenisPekerjaan", "className": "tengah" },
                     { "data": "StatusName" },
                     { "data": null},
                     { "data": null  }
