--- a/Reston.EProc.Runner.IIS/View/anggaran.html
+++ b/Reston.EProc.Runner.IIS/View/anggaran.html
@@ -102,7 +102,12 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <form class="form-horizontal label-kanan">
-                                            <button id="tambah" class="btn btn-success" onclick="NewItem()" type="submit"><span class="fa fa-upload"></span> Import Excel</button><br /><br />
+                                            <div class="form-group">
+                                                <label for="exampleInputFile" class="col-sm-2">File Anggaran</label>
+                                                <input type="file" id="import-anggaran" name="upload">
+                                                <p class="help-block col-sm-2">Import Excel.</p>
+                                                <!--<input type="submit" value="Upload" class="btn btn-default" />-->
+                                            </div>
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">Search</label>
                                                 <div class="col-sm-4">
