--- a/Reston.EProc.Runner.IIS/View/pengadaan-add.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-add.html
@@ -233,23 +233,17 @@
                                                 <input type="hidden" name="FileDokumenNotaInternal" class="dropzoneFile" attr1="" attr2="" />
                                                 <div id="DokumenNotaInternal" attr="NOTA" action="/api/PengadaanE/UploadFile?tipe=NOTA" class="dropzone"></div>
                                             </div>
-                                        </div>
-                                        <!--
-                                        <div class="form-group col-md-6">
                                             <div class="form-group ">
-                                                <label class="title">Purchase Request</label>
-                                                <input type="text" class="form-control"  >
-                                                <div action="/upload-target" class="dropzone"></div>
+                                                <label class="title">Nomor COA:</label>
+                                                <input type="text" name="no-coa" class="form-control">
                                             </div>
                                         </div>
-                                         -->
                                         <div class="form-group col-md-6">
                                             <label class="title">Unit Kerja Pemohon:</label>
                                             <select class="form-control select2" name="UnitKerjaPemohon" style="width: 100%;">
                                                 <option selected disabled>--Pilih--</option>
                                             </select>
                                         </div>
-
                                         <div class="form-group col-md-6">
                                             <label class="title">Dokumen Lainnya:</label>
                                             <input type="text" name="TitleDokumenLain" class="form-control">
