--- a/Reston.EProc.Runner.IIS/View/create-pks.html
+++ b/Reston.EProc.Runner.IIS/View/create-pks.html
@@ -142,7 +142,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="panel-header-white">
-                                                <span class="title-header" id="section-6">Proyek
+                                                <span class="title-header" id="section-6">Status PKS
                                                 </span>
                                                 <button id="Status" class="btn bg-aqua btn-flat margin"></button>
                                                  
@@ -361,10 +361,9 @@
                     </div>
                 </div>
 	          </div>
-	          <div class="modal-footer">
-                  <a class="btn btn-default addWorkflowStep" data-toggle="tooltip" title="Setujui & Diteruskan" >Setujui & Diteruskan </a>	
-		        <button type="button" class="btn btn-default " data-dismiss="modal" >Close</button>		
-	          </div>
+	              <div class="modal-footer">
+                      <button type="button" class="btn btn-default " data-dismiss="modal" >Close</button>		
+	             </div>
 	        </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
