--- a/Reston.EProc.Runner.IIS/View/create-spk.html
+++ b/Reston.EProc.Runner.IIS/View/create-spk.html
@@ -81,7 +81,6 @@
                     <div class="navbar-custom-menu">
                         <ul id="menu-top" class="nav navbar-nav">
                             <li><a  title="Simpan" href="#" class="Simpan"><i class="fa fa-fw fa-save " style="font-size:20px;"></i>Simpan</a></li>
-                            <li><a  title="Ajukan" href="#" class="ajukan" style="display:none">Ajukan</a></li>
                             <li><a  id="Hapus" title="Hapus" href="#" class="Hapus" style="display:none"><i class="fa fa-fw fa-trash " style="font-size:20px;"></i>Hapus</a></li>
                         </ul>
                     </div>
@@ -125,10 +124,10 @@
                 <div class="row">
                     <div class="col-md-10">
                         <div class="box box-primary box-white">
-                                <input type="hidden" id="isPIC" />
-                                <input type="hidden" id="pengadaanId" />
-                                <input type="hidden" id="VendorId" />
+                                <input type="hidden" id="spkId" />
                                 <input type="hidden" id="pksId" />
+                                <input type="hidden" id="isOwner" />
+                                <input type="hidden" id="StatusSpk" />
                                 <div class="box-body">
                                     <div class="row">
                                         <div class="col-md-10">
@@ -139,14 +138,20 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="panel-header-white">
-                                                <span class="title-header" id="section-6">Proyek</span>
+                                                <span class="title-header" id="section-6">Status Spk</span>
+                                                <button id="Status" class="btn bg-aqua btn-flat margin"></button>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-12">
                                             <label class="title">Judul:</label>
-                                            <input type="text" class="form-control" id="judul" disabled>
+                                            <div class="input-group">
+                                              <input type="text" class="form-control" id="judul" disabled>
+                                              <span class="input-group-btn">
+                                                <button class="btn btn-info btn-flat cari-pengadaan" type="button">Cari Pengadaan</button>
+                                              </span>
+                                            </div>  
                                         </div>
                                     </div>
                                     <div class="row">
@@ -161,20 +166,18 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
-                                            <label class="title">No. PKS:</label>
-                                            <select class="form-control" id="no-pks">
-                                                <option></option>
-                                            </select>
+                                            <label class="title">No. PKS</label>
+                                            <input type="text" class="form-control" id="no-pks" disabled>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
-                                            <label class="title">No. SPK Lanjutan:</label>
-                                            <input class="form-control" type="text" id="no-spk-lanjutan"> <br />
-                                            <button id="id" class="btn btn-success " type="button">
+                                            <label class="title">No. SPK</label>
+                                            <input class="form-control" type="text" id="no-spk" disabled> <br />
+                                            <button id="spk-aktifkan" class="btn btn-success " type="button">
                                                 <a href="#" style="color:white;">AKTIFKAN</a>
                                             </button>
-                                            <button id="id" class="btn btn-danger " type="button">
+                                            <button id="spk-batal" class="btn btn-danger " type="button">
                                                 <a href="#" style="color:white;">BATAL</a>
                                             </button>
                                         </div>
@@ -182,7 +185,7 @@
                                             <label class="title">Status:</label>
                                             <div class="radio">
                                                 <label>
-                                                    <input type="radio" name="status" />Draf
+                                                    <input type="radio" name="status" value="Draft" />Draf
                                                 </label>
                                                 <label>
                                                     <input type="radio" name="status" />Aktif
@@ -196,7 +199,7 @@
                                     <div class="row">
                                         <div class="form-group col-md-4">
                                             <label class="title">Tanggal SPK:</label>
-                                            <input id="tanggal-pekerjaan-mulai" type="text" class="tanggal-tahapan form-control input-group dateJadwal">
+                                            <input id="tanggal-spk" type="text" class="tanggal-tahapan form-control input-group date">
                                         </div>
                                         <div class="col-md-2">
                                             <div class="form-group">
@@ -209,8 +212,8 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
-                                            <label class="title">Nilai SPK:</label>
-                                            <input id="tanggal-pekerjaan-mulai" type="text" class="tanggal-tahapan form-control input-group dateJadwal">
+                                            <label class="title">Nilai SPK</label>
+                                            <input id="nilai-spk" type="text" class="tanggal-tahapan form-control input-group dateJadwal">
                                         </div>
                                     </div>
                                         <div class="row">
@@ -226,7 +229,7 @@
                                                     <div class="col-md-12">
                                                         <div class="form-group">
                                                             <label class="title">Unggah SPK Lanjutan</label>
-                                                            <div id="dok-pks" attr="PKS" action="/api/PengadaanE/UploadFile?tipe=PKS" class="dropzone"></div>
+                                                            <div id="dok-spk" action="/api/SPk/UploadFile?tipe=PKS" class="dropzone"></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -256,7 +259,8 @@
              immediately after the control sidebar -->
         <div class="control-sidebar-bg"></div>
     </div><!-- ./wrapper -->
-     <div class="modal" id="konfirmasiFile" role="dialog" FileId="" attr1="" aria-hidden="true">
+    
+    <div class="modal" id="konfirmasiFile" role="dialog" FileId="" attr1="" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -271,6 +275,71 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+
+    <!-- Modal -->
+        <div class="modal " id="pengadaan_modal" role="dialog"  aria-hidden="true">            
+          <div class="modal-dialog modal-lg">
+	        <div class="modal-content">
+	          <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title" id="TitleKonfirmasi">List PKS</h4>
+	          </div>
+	          <div class="modal-body">
+                <div class="row" >
+                    <div class="col-md-12">
+                        <form class="form-horizontal label-kanan">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Judul</label>
+                                <div class="col-sm-4">
+                                    <input id="title" type="text" class="form-control " placeholder="Judul">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Klasifikasi</label>
+                                <div class="col-sm-4">
+                                    <select id="klasifikasi" class="form-control select2" style="width: 100%;">
+                                        <option selected="selected" value="">ALL</option>
+                                        <option value="Sipil">SIPIL</option>
+                                        <option value="Non Sipil">NONSIPIL</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <div class="submitgray button-row">
+                                        <button id="cari-pks" class="btn btn-primary " type="button">Cari</button>                                                               
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="row" >
+                    <div class="col-md-12">
+		                <table class="table table-bordered table-striped table-responsive" id="tbl-PKS" style="margin-top:20px; ">
+                            <thead>
+                                <tr>
+                                    <th>Nama Pekerjaan</th>
+                                    <th>No PKS</th>
+                                     <th>No Pengadaan</th>
+                                    <th>Klasifikasi</th>
+                                    <th>Pemenang</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+	          </div>
+	          <div class="modal-footer">
+		        <button type="button" class="btn btn-default " data-dismiss="modal" >Close</button>		
+	          </div>
+	        </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+
     <!--endviewr-->
     <!-- jQuery 2.1.4 -->
     <script src="plugins/jQuery/jQuery-2.1.4.min.js"></script>
@@ -308,7 +377,7 @@
     <script src="blockui/jquery.blockUI.js"></script>
     <script src="dist/js/menu.js"></script>
     <script src="dropzone.js"></script>
-    <script src="dist/js/create-pks.js"></script>
+    <script src="dist/js/create-spk.js"></script>
     <script>
         
     </script>
