--- a/Reston.EProc.Runner.IIS/View/anggaran.html
+++ b/Reston.EProc.Runner.IIS/View/anggaran.html
@@ -132,9 +132,10 @@
                             <div class="box-body">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <table id="example1" class="table table-bordered">
+                                        <table id="tbl-anggaran" class="table table-bordered">
                                             <thead>
                                                 <tr>
+                                                    <th class="tengah">Nomor COA</th>
                                                     <th class="tengah">Region</th>
                                                     <th class="tengah">Divisi / Cabang</th>
                                                     <th class="tengah">Periode</th>
@@ -143,48 +144,6 @@
                                                     <th class="tengah">Nilai Aset</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>Regional 3</td>
-                                                    <td>Regional 3</td>
-                                                    <td>Aug-16</td>
-                                                    <td>Furniture Fixture</td>
-                                                    <td>1 Biro Table</td>
-                                                    <td class="tengah">10.000.000</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Regional 3</td>
-                                                    <td>Regional 3</td>
-                                                    <td>Jun-16</td>
-                                                    <td>Office Equipment</td>
-                                                    <td>Alarm System</td>
-                                                    <td class="tengah">10.000.000</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Regional 3</td>
-                                                    <td>Regional 3</td>
-                                                    <td>Jun-16</td>
-                                                    <td>Office Equipment</td>
-                                                    <td>Brankas 7 Laci</td>
-                                                    <td class="tengah">20.000.000</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Regional 3</td>
-                                                    <td>Regional 3</td>
-                                                    <td>Jun-16</td>
-                                                    <td>Office Equipment</td>
-                                                    <td>CCTV Security System</td>
-                                                    <td class="tengah">20.000.000</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Regional 3</td>
-                                                    <td>Regional 3</td>
-                                                    <td>Jun-16</td>
-                                                    <td>Furniture Fixture</td>
-                                                    <td>College Chair/CMO Chair</td>
-                                                    <td class="tengah">50.000.000</td>
-                                                </tr>
-                                            </tbody>
                                         </table>
                                     </div>
                                 </div>
@@ -246,97 +205,25 @@
     <script src="plugins/accounting/accounting.js"></script>
     <script>
         var table;
-        function NewItem() {
-            window.location.href = "add-eCatalogue2.html";
-        }
-        function SetListRegion() {
-            $.ajax({
-                url: "/api/ReferenceData/GetAllRegion",
-                success: function (data) {
-                    for (var i in data) {
-                        $("#region").append("<option value='" + data[i].Name + "'>" + data[i].Name + "</option>");
-                    }
-                },
-                complete: function (xhr, textStatus) {
-                    console.log(xhr.status);
-                    ajaxCompleteProcess(xhr);
-                }
-            });
-        }
-        function showDeleteConfirmation(idd) {
-            $("#tobeDelete").val(idd);
-            $("#DeleteModal").modal('show');
-        }
-        function Delete(idd) {
-            $("#DeleteModal").modal('hide');
-            var v = 0;
-            if (!idd) {
-                v = $("#tobeDelete").val();
-            }
-            else v = idd
-            $.ajax({
-                url: "/api/Produk/DeleteProduk?id=" + v,
-                success: function (data) {
-                    table.draw();
-                },
-                complete: function (xhr, textStatus) {
-                    //console.log(xhr.status);
-                    ajaxCompleteProcess(xhr);
-                }
-            });
-        }
         $(function () {
-            SetListRegion();
-            SetListKategori();
-            table = $('#example1').DataTable({
+            table = $('#tbl-anggaran').DataTable({
                 "serverSide": true,
                 "searching": false,
                 "ajax": {
-                    "url": 'api/Produk/GetAllProduk',
-                    "type": 'GET',
+                    "url": 'api/Budget/List',
+                    "type": 'POST',
                     "data": function (d) {
-                        d.name = $("#nama_item").val();
-                        d.region = $("#region option:selected").text();
-                        d.kategori = $("#kategori option:selected").text();
-                        d.klasifikasi = $("#klasifikasi").val();
-                    },
-                    "error": function (jqXHR, textStatus, errorThrown) {
-                        $('#example1').DataTable().clear().draw();
+                        d.cari = $("#cari").val();
                     }
                 },
-                //"ajax": 'api/Produk/GetAllProduk?name=' + $("#nama_item").val(),
                 "columns": [
-                    { "data": "Nama" },
+                    { "data": "NoCoa" },
                     { "data": "Region" },
-                    { "data": "Klasifikasi" },
-                    { "data": "Price", "class": "rata_kanan_pad10" },
-                    { "data": "Satuan", "class": "tengah" },
-                    { "data": "LastUpdate", "class": "tengah" },
-                    { "data": "Source" },
-                    { "data": "null", "width": "3%", "class": "tengah" }
-                ],
-                "columnDefs": [
-                         {
-                             "render": function (data, type, row) {
-                                 return '<a href="catalog-detail.html?id=' + row.Id + '">' + data + '</a>';
-                             },
-                             "targets": 0,
-                             "orderable": false
-                         },
-                         {
-                             "render": function (data, type, row) {
-                                 return accounting.formatNumber(row.Price, { thousand: ".", decimal: ",", precision: 2 });
-                             },
-                             "targets": 3,
-                             "orderable": false
-                         },
-                         {
-                             "render": function (data, type, row) {
-                                 return '<a href="javascript:showDeleteConfirmation(' + row.Id + ')" class="btn btn-xs btn-danger remove-item" title="Hapus"><span class="fa fa-trash-o"></span></a>';
-                             },
-                             "targets": 7,
-                             "orderable": false
-                         }
+                    { "data": "Divisi" },
+                     { "data": "Periode" },
+                     { "data": "GroupAset" },
+                     { "data": "JenisAset" },
+                     { "data": "NilaiAset" }
                 ],
                 "paging": true,
                 "lengthChange": false,
@@ -349,12 +236,7 @@
 
             $("#example1_filter").hide();
             $("#cari").on("click", function () {
-                var region = $("#region option:selected").text();
-                var nama_item = $("#nama_item").val();
                 table.draw();
-                //table.columns(0).search( nama_item ).draw();
-                //table.columns(1).search( region ).draw();
-                //table.columns(2).search( subKategori ).draw();
             });
         });
     </script>
